[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clinical-chatbot"
version = "0.1.0"
description = "Multi-agent clinical data analysis chatbot"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langsmith>=0.2.0",
    "weaviate-client>=4.6.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.38.0",
    "openpyxl>=3.1.0",
    "tiktoken>=0.7.0",
    "sentence-transformers>=3.1.0",
    "faiss-cpu>=1.8.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.30.0",
    "fastapi>=0.115.0",
    "ollama>=0.3.0",
    "transformers>=4.44.0",
    "torch>=2.4.0",
    "accelerate>=0.34.0",
    "pydantic-settings>=2.10.1",
    "bitsandbytes>=0.46.1",
    "sentencepiece>=0.2.0",
    "huggingface-hub>=0.34.3",
    "langchain-huggingface>=0.3.1",
    "pypdf>=5.9.0",
    "unstructured[local-inference]>=0.18.11",
    "langchain-experimental>=0.3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.11.0",
    "jupyter>=1.1.0",
    "ipykernel>=6.29.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/clinical_chatbot"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
